--- a/style.css
+++ b/style.css
@@ -1,15 +1,46 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+	background-color: aqua;
 }
 
-.task {
-    width: 100%;
+header, #form {
+	text-align: center;
+}
+
+main #text {
+	border: 0;
+	border-bottom: 2px solid black;
+	outline: none;
+	font-size: 24px;
+}
+
+#form #add, #tasks #clean {
+	padding: 15px;
+	border-radius: 10px;
+	background-color: white;
+}
+
+#submit:hover {
+    cursor: pointer;
+}
+
+main #tasks #list {
+	display: grid;
+	place-content: center;
+}
+
+#list .task {
+	width: 100%;
 	height: 60px;
-	line-height: 60px;
 	font-size: 20px;
 	padding: 0 20px;
 }
 
-.task:hover {
+li .delete {
+	float: right;
+	color: red;
+}
+
+.task:hover .delete{
     cursor: pointer;
 }
