--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main #text {
 	font-size: 24px;
 }
 
-#form #add, #tasks #clean {
+#form #add, #form #clean {
 	padding: 15px;
 	border-radius: 10px;
 	background-color: white;
